# dreal3-apache2

./: .bazelrc  .clang-tidy  .ycm_extra_conf.py  BUILD.bazel  README.md  WORKSPACE  setup.py
dreal/: BUILD.bazel  __init__.py  dreal_main.cc  dreal_py.cc  workspace.bzl
dreal/api/: api.cc
dreal/contractor/: BUILD.bazel  contractor.cc  contractor.h  contractor_cell.cc  contractor_cell.h  contractor_fixpoint.cc  contractor_fixpoint.h  contractor_forall.h  contractor_ibex_fwdbwd.cc  contractor_ibex_fwdbwd.h  contractor_ibex_fwdbwd_mt.cc  contractor_ibex_fwdbwd_mt.h  contractor_ibex_polytope.cc  contractor_ibex_polytope.h  contractor_ibex_polytope_mt.cc  contractor_ibex_polytope_mt.h  contractor_id.cc  contractor_id.h  contractor_integer.cc  contractor_integer.h  contractor_join.cc  contractor_join.h  contractor_sampling.cc  contractor_sampling.h  contractor_seq.cc  contractor_seq.h  contractor_shearing.cc  contractor_shearing.h  contractor_worklist_fixpoint.cc  contractor_worklist_fixpoint.h  counterexample_refiner.cc
dreal/dr/: driver.cc
dreal/examples/: BUILD.bazel  control.cc  dnn_01.cc  dnn_02.cc  synthesize_lyapunov_normalized_pendulum.cc
dreal/optimization/: nlopt_optimizer.cc
dreal/smt2/: parser.yy
dreal/solver/: BUILD.bazel  branch.cc  branch.h  branch_gradient_descent.cc  branch_gradient_descent.h  branch_max_diam.cc  branch_max_diam.h  config.cc  config.h  context.cc  context.h  context_impl.cc  context_impl.h  expression_evaluator.cc  filter_assertion.cc  filter_assertion.h  forall_formula_evaluator.cc  forall_formula_evaluator.h  formula_evaluator.cc  icp.cc  icp_parallel.cc  icp_parallel.h  icp_seq.cc  icp_stat.h  relational_formula_evaluator.h  sat_solver.cc  sat_solver.h  theory_solver.cc
dreal/symbolic/: BUILD.bazel  symbolic.cc  symbolic.h
dreal/util/: BUILD.bazel  box.cc  box.h  box_cell.cc  box_cell.h  cds.h  eigen.h  evaluation_visitor.h  expression_decomposer.cc  expression_decomposer.h  (+10 more)
scripts/: run-clang-tidy.sh
test/: BUILD.bazel  cds_test.cc  cpp_taskflow_test.cc  eigen3_test.cc  ibex_test.cc  libcuckoo_test.cc  tbb_test.cc  thread_pool_test.cc
tools/: cds.BUILD.bazel  cpp_taskflow.BUILD.bazel  dreal.bzl  kcov.sh  libcuckoo.BUILD.bazel  picosat.BUILD.bazel  tbb.BUILD.bazel  thread_pool.BUILD.bazel
(+20 files in other folders)
